--- a/IT/codebattle/src/main/resources/application.properties
+++ b/IT/codebattle/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/CodeKataBattle
+spring.datasource.username=post
+spring.datasource.password=gres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
