--- a/IT/codebattle/src/main/resources/application.properties
+++ b/IT/codebattle/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=gres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+
+
+spring.security.user.name=mattia
+spring.security.user.password=0828
