--- a/IT/codebattle/src/main/resources/application.properties
+++ b/IT/codebattle/src/main/resources/application.properties
@@ -8,3 +8,18 @@ spring.jpa.show-sql=true
 
 spring.security.user.name=mattia
 spring.security.user.password=0828
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=co.de.ka.ta.se@gmail.com
+spring.mail.password=mjxonbwqwazdxnsm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+
+
