--- a/IT/codebattle/pom.xml
+++ b/IT/codebattle/pom.xml
@@ -57,6 +57,17 @@
     <version>0.9.1</version>
 </dependency>
 
+<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
+
+
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+
 	<!-- Dipendenza per Jakarta Servlet API -->
 <dependency>
     <groupId>jakarta.servlet</groupId>
