--- a/IT/codebattle/pom.xml
+++ b/IT/codebattle/pom.xml
@@ -75,6 +75,17 @@
     <version>2.3.1</version>
 </dependency>
 
+<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
+
+
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+
 	</dependencies>
 
 	<build>
