--- a/IT/codebattle/pom.xml
+++ b/IT/codebattle/pom.xml
@@ -67,6 +67,23 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-mail</artifactId>
     	</dependency>
+		
+
+
+		<!-- Spring Boot Starter Web per servizi RESTful e MVC -->
+	<dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+
+	<dependency>
+    	<groupId>com.fasterxml.jackson.datatype</groupId>
+   	 	<artifactId>jackson-datatype-jsr310</artifactId>
+    	<version>2.13.3</version> <!-- usa la versione appropriata per la tua versione di Jackson -->
+	</dependency>
+
+
+
 
 	<!-- Dipendenza per Jakarta Servlet API -->
 <dependency>
