--- a/IT/codebattle/src/main/resources/application.properties
+++ b/IT/codebattle/src/main/resources/application.properties
@@ -19,6 +19,13 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
+
+
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 
 
