--- a/IT/codebattle/pom.xml
+++ b/IT/codebattle/pom.xml
@@ -83,6 +83,11 @@
 	</dependency>
 
 
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-test</artifactId>
+    <scope>test</scope>
+</dependency>
 
 
 	<!-- Dipendenza per Jakarta Servlet API -->
